<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="8dp"
    android:backgroundTint="@color/blue_shade_2"
    app:cardCornerRadius="4dp"
    app:cardElevation="4dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="5"
           android:id="@+id/idLL1" >
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/rv_card_ItemName"
                android:textColor="@color/white"
                android:padding="4dp"
                android:layout_margin="3dp"
                android:id="@+id/idTVItemName"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/idTVQuantity"
                android:text="@string/rv_card_Quantity"
                android:textColor="@color/white"
                android:padding="4dp"
                android:layout_margin="3dp"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.5"
                android:text="@string/rv_card_Rate"
                android:textColor="@color/white"
                android:padding="4dp"
                android:layout_margin="3dp"
                android:id="@+id/idTVRate"/>
            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:layout_margin="3dp"
                android:padding="4dp"
                android:src="@drawable/ic_delete"
                app:tint="@color/white"
                android:id="@+id/idIVDelete"/>

        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rv_card_TotalCost"
            android:layout_below="@+id/idLL1"
            android:textColor="@color/white"
            android:layout_margin="3dp"
            android:layout_toLeftOf="@+id/idTVToatalAmt"
            android:padding="4dp"
            android:id="@+id/idTVHeading"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/idLL1"
            android:layout_alignParentEnd="true"
            android:text="@string/rv_card_Amt"
            android:textColor="@color/white"
            android:id="@+id/idTVToatalAmt"
            android:padding="4dp"
            android:layout_margin="3dp"
            />
    </RelativeLayout>

</androidx.cardview.widget.CardView>