<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_gravity="center">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/blue_shade_1">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_items_to_Cart"
            android:textAllCaps="false"
            android:textAlignment="center"
            android:gravity="center"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="20dp"
            android:padding="4dp"
            android:layout_margin="4dp"
           android:id="@+id/idTVHeading"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_below="@+id/idTVHeading">
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/TextInputEditTextTheme"
                    android:layout_margin="5dp"
                    android:hint="@string/add_entrer_item_Name"
                    android:padding="5dp"
                    android:textColorHint="@color/white"
                    app:hintTextColor="@color/white"
                   >
                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/idEdItemName"
                        android:inputType="text"
                        android:textColorHint="@color/white"
                        android:textColor="@color/white"
                        android:textSize="14sp"/>


                </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/TextInputEditTextTheme"
                android:layout_margin="5dp"
                android:hint="@string/add_entrer_item_Quantity"
                android:padding="5dp"
                android:textColorHint="@color/white"
                app:hintTextColor="@color/white"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/idEdItemQuantity"
                    android:inputType="number"
                    android:textColorHint="@color/white"
                    android:textColor="@color/white"
                    android:textSize="14sp"/>


            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/TextInputEditTextTheme"
                android:layout_margin="5dp"
                android:hint="@string/add_entrer_item_Price"
                android:padding="5dp"
                android:textColorHint="@color/white"
                app:hintTextColor="@color/white"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/idEdItemPrice"
                    android:inputType="number"
                    android:textColorHint="@color/white"
                    android:textColor="@color/white"
                    android:textSize="14sp"/>


            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2"
                android:layout_margin="5dp"
                >
                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_margin="8dp"
                    android:id="@+id/idBtnCancel"
                    android:text="@string/bt_cancel"
                    android:textAllCaps="false"
                    android:background="@drawable/custom_button_back"

                   />

                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_margin="8dp"
                    android:id="@+id/idBtnAdd"
                    android:text="@string/bt_add"
                    android:textAllCaps="false"
                    android:background="@drawable/custom_button_back"/>


            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>

</androidx.cardview.widget.CardView>